2009-12-19  Vincent Torri  <doursse at users dot sf dot net>

	* Makefile.am:
	remove m4 libtool installed files during the
	maintainer-clean rule

	* src/lib/evil_stdio.c:
	* src/lib/evil_stdio.h:
	add the remove() function

2009-12-11  Vincent Torri  <doursse at users dot sf dot net>

	* configure.ac:
	improve configure output

2009-12-07  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_libgen.c:
	* src/lib/evil_libgen.h:
	* src/lib/Makefile.am:
	* win32/vs8/libevil.vcproj:
	* win32/vs9/libevil.vcproj:
	add basename() function.

	* src/lib/Evil.h:
	add basename() function and comment useless wrappers (for now).

	* src/lib/dlfcn/dlfcn.h:
	remove useless include.

	* src/lib/evil_util.c:
	formatting.

2009-12-06  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_string.c:
	add strrstr() function.

	* src/bin/evil_suite.c:
	* src/lib/evil_fnmatch.c:
	* src/lib/evil_fnmatch_list_of_states.c:
	include config.h

2009-10-08  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_main.c:
	Shutdown socket system in evil_shutdown().
	Update init/shutdown scheme.

2009-09-08  Vincent Torri  <doursse at users dot sf dot net>

	* INSTALL:
	update INSTALL file

2009-08-27  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/dlfcn/dlfcn.c:
	fix warnings

	* src/lib/evil_fnmatch_list_of_states.c:
	fix vc++ warning

	* win32/MANIFEST.txt:
	* win32/README.txt:
	* win32/start.bat:
	* win32/vs9/evil.sln:
	* win32/vs9/libdlfcn.vcproj:
	* win32/vs9/libevil.vcproj:
	* win32/vs9/test/out/update_deps.bat:
	* win32/vs9/test/start.bat:
	* win32/vs9/test/test.sln:
	* win32/vs9/test/test.vcproj:
	* win32/vs9/test/test_fnmatch.cpp:
	* win32/vs9 (added):
	* win32/vs9/test (added):
	* win32/vs9/test/test_fnmatch.cpp (added):
	* win32/vs9/test/test.vcproj (added):
	* win32/vs9/test/start.bat (added):
	* win32/vs9/test/out (added):
	* win32/vs9/test/out/update_deps.bat (added):
	* win32/vs9/test/test.sln (added):